added main menu, started to implement hud

--- a/TinyLittleWar/Config/DefaultEngine.ini
+++ b/TinyLittleWar/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=TinyLittleWar
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap
+GameDefaultMap=/Game/TopDownBP/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -62,5 +62,4 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
 
